add_executable(c-example c-example.c)
add_executable(clock clock.cc)
add_executable(demo demo-main.cc)
add_executable(input-example input-example.cc)
add_executable(ledcat ledcat.cc)
add_executable(minimal-example minimal-example.cc)
add_executable(pixel-mover pixel-mover.cc)
add_executable(scrolling-text-example scrolling-text-example.cc)
add_executable(text-example text-example.cc)
add_executable(xmas-tree xmas-tree.cc)

# Link your library to the examples
target_link_libraries(c-example ${PROJECT_NAME})
target_link_libraries(clock ${PROJECT_NAME})
target_link_libraries(demo ${PROJECT_NAME})
target_link_libraries(input-example ${PROJECT_NAME})
target_link_libraries(ledcat ${PROJECT_NAME})
target_link_libraries(minimal-example ${PROJECT_NAME})
target_link_libraries(pixel-mover ${PROJECT_NAME})
target_link_libraries(scrolling-text-example ${PROJECT_NAME})
target_link_libraries(text-example ${PROJECT_NAME})
target_link_libraries(xmas-tree ${PROJECT_NAME})
